Fix app-promo z-index

--- a/src/sass/modules/_app-promo.scss
+++ b/src/sass/modules/_app-promo.scss
@@ -23,10 +23,7 @@
     @include atDesktopS {
         // box model
         padding: 20px 40px;
-        // padding-left: 65px;
         align-items: center;
-        // flex-direction: column;
-        // align-items: flex-start;
     }
 }
 
@@ -140,12 +137,12 @@
     @include atDesktopS {
         // positioning
         position: absolute;
-        bottom: -30px;
-        right: -20px;
-        z-index: 1;
+        bottom: -60px;
+        right: 60px;
+        z-index: -1;
         
         // box model
-        // display: block;
+        display: block;
         height: 370px;
         pointer-events: none;
     }
