--- a/src/sass/modules/_hero.scss
+++ b/src/sass/modules/_hero.scss
@@ -289,7 +289,7 @@
     position: absolute;
     bottom: -40px;
     left: 0;
-    z-index: 2;
+    z-index: 7;
     
     // box model
     width: 100%;
